# LucidLinkTask

./: CMakeLists.txt  LICENSE  README.md  compile-all.sh
.github/workflows/: cmake-multi-platform.yml
playground/: CMakeLists.txt
src/: CMakeLists.txt  cell.h  list_solution.cpp  list_solution.h  matrix_solution.cpp  matrix_solution.h  number_of_components.h  spin_lock.h  types.h
src/utils/: cell.h  spin_lock.h
tests/: CMakeLists.txt  list.cpp  matrix.cpp
